--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&display=swap");
 section {
   width: 100vw;
   height: 100vh;
   display: grid;
   place-items: center;
+  font-family: "Jost", sans-serif;
 }
 
 #quote-box {
@@ -15,6 +17,7 @@ section {
 h1#text {
   text-align: center;
   font-size: 2.75rem;
+  line-height: 36px;
 }
 
 #author {
@@ -41,10 +44,14 @@ h1#text {
   justify-content: center;
   border-radius: 4px;
   margin-right: 10px;
+  opacity: 1;
 }
 .icon_div i {
   color: white;
   font-size: 1.75rem;
+}
+.icon_div:hover {
+  opacity: 0.9;
 }
 
 .quote_btn {
@@ -52,6 +59,10 @@ h1#text {
   border: none;
   border-radius: 4px;
   color: white;
+  opacity: 1;
+}
+.quote_btn:hover {
+  opacity: 0.9;
 }
 
 .btn_container {
