--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&display=swap");
 section {
   width: 100vw;
   height: 100vh;
   display: grid;
   place-items: center;
+  font-family: "Jost", sans-serif;
 }
 
 #quote-box {
@@ -14,6 +16,7 @@ section {
 h1#text {
   text-align: center;
   font-size: 2.75rem;
+  line-height: 36px;
 }
 #author {
   text-align: right;
@@ -36,9 +39,13 @@ h1#text {
   justify-content: center;
   border-radius: 4px;
   margin-right: 10px;
+  opacity: 1;
   i {
     color: white;
     font-size: 1.75rem;
+  }
+  &:hover {
+    opacity: 0.9;
   }
 }
 .quote_btn {
@@ -46,9 +53,10 @@ h1#text {
   border: none;
   border-radius: 4px;
   color: white;
-  //   :hover {
-  //       background-color: ;
-  //   }
+  opacity: 1;
+  &:hover {
+    opacity: 0.9;
+  }
 }
 .btn_container {
   display: flex;
